changed firebase-app attributes

--- a/public/index.html
+++ b/public/index.html
@@ -25,9 +25,9 @@
   <body>
   <firebase-app
     name="notes"
-    api-key="AIzaSyBaj-RwmctEgpVWMrtes5pfmC8r5kxMa9g"
-    auth-domain="authwithfirebase.firebaseapp.com"
-    database-url="https://authwithfirebase.firebaseio.com">
+    api-key="your-api-key"
+    auth-domain="your-domain"
+    database-url="your-data-base-url">
   </firebase-app>
 	<platinum-sw-register
     		auto-register
